Work in progress on fixing redacted footnote text.  Works except for the case of overlapping redactions (which I think were broken in the same way before).  More to come.
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@14944 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_annotations.scss
+++ b/src/main/resources/scss/_annotations.scss
@@ -361,6 +361,17 @@
 
 	object[type$=slidevideo] .bar a.mark {display: none;}
 
+	#footnotes{
+		.redacted-text{
+			color: $tertiary_grey;
+			text-decoration: line-through;
+			display: none;
+			&.shown{
+				display: inline;
+			}
+		}
+	}
+
 	//Sometimes footnotes are redacted, this will hide the actual footnote when that is the case
 	li.footnote.redacted {
 		span, a {
